<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_logo">Application logo</string>
    <string name="app_name">EZ Stream Updater</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applying_update">Applying enhancements…</string>
    <string name="setup_message">Let\'s get your EZ Stream Media Center experience started</string>
    <string name="brand_screenshot">Skin Screenshot</string>
    <string name="can_not_write_update">Could not write media player configuration files. Please email info@ezstreambox.com and reference this error message for support. Running the updater again will not fix this issue!</string>
    <string name="cant_resume">"Can't resume the download."</string>
    <string name="close_button">Close</string>
    <string name="connection_error_message">An error has occurred while loading information from internet. Please, check your internet connection.</string>
    <string name="continue_button">Update Now</string>
    <string name="decompress_error_message">There was an error while decompressing the update file. Please email info@ezstreambox.com and reference this error message for support. Running the updater again will not fix this issue!</string>
    <string name="decompressing_update">Decompressing media player enhancements…</string>
    <string name="device_issue">A storage issue has arisen.</string>
    <string name="disclaimer_activity_title">Welcome to the %s</string>
    <string name="download_error">Download Error</string>
    <string name="download_internal_error">Internal error: something went wrong while communicating with download manager.</string>
    <string name="downloading_new_version">Downloading updated enhancements for %s…</string>
    <string name="file_exists">The requested destination file already exists.</string>
    <string name="github_error">Connection Error</string>
    <string name="github_internal_error">Internal error: something went wrong when processing remote information.</string>
    <string name="http_error">An HTTP error has occurred.</string>
    <string name="install_player">Install Media Player</string>
    <string name="insufficient_space">Insufficient storage space.</string>
    <string name="license_error">For EZ Stream Customers Only!</string>
    <string name="license_message">This application is only for genuine EZ Stream devices. If you are using any other device this program will not work. To purchase a genuine EZ Stream unit please visit www.ezstreambox.com</string>
    <string name="loading">Loading…</string>
    <string name="many_redirects">There were too many redirects.</string>
    <string name="missing_play_store">Missing Play Store</string>
    <string name="next_button">Next</string>
    <string name="no_device">No external storage device was found.</string>
    <string name="play_store_not_installed">It seems that Play Store is not installed in your device. Please, install Google Apps.</string>
    <string name="player_id">org.xbmc.kodi</string>
    <string name="player_name">Media Center</string>
    <string name="player_not_installed_message">%s is not installed. You must proceed to install it before continue.</string>
    <string name="player_not_installed_title">Player not installed</string>
    <string name="retry_button">Retry</string>
    <string name="select_brand">Select Your Build</string>
    <string name="starting_download">Starting download…</string>
    <string name="unhandled_http_error">"An HTTP code was received that download manager can't handle."</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="update_done">Update done.</string>
    <string name="update_error_write">Failed to apply the new update to the media player. Please email info@ezstreambox.com and reference this error message for support. Running the updater again will not fix this issue!</string>
    <string name="update_failed">Update failed.</string>
    <string name="update_incomplete">Update files are incomplete. Please email info@ezstreambox.com and reference this error message for support. Running the updater again will not fix this issue!</string>
    <string name="update_not_clean">Failed to apply a clean update to the media player. Please email info@ezstreambox.com and reference this error message for support. Running the updater again will not fix this issue!</string>
    <string name="update_tag">Failed to mark the newly applied update as the last update. Please email info@ezstreambox.com and reference this error message for support. Running the updater again will not fix this issue!</string>
    <string name="updating_brand">Updating build: %s</string>
    <string name="welcome_text">Disclaimer: By downloading or using this app you are agreeing that EZ Stream takes no responsibility for the content or addons included within. EZ Stream does not host, distribute, hold or have any control over any content provided by any addon. It is the users responsibility to ensure they are not selling, distributing or downloading any copyrighted material from any addons - please ensure the end user checks the legalities of this use within their country. EZ Stream does not provide any support on any add-ons within the Media Center application - EZ Stream is not affiliated with Media Center.</string>
    <string name="first_connect_message">An internet connection has been established. Would you like to check for updates?</string>
    <string name="not_now">No</string>
    <string name="remind_me_later">Later</string>
    <string name="yes">Yes</string>
    <string name="check_for_updates">Check for updates?</string>
    <string name="install_update">Install Update</string>
    <string name="update_available">Update Available</string>
    <string name="skip_updates">Continue to Player</string>
    <string name="click_for_more_update_details">Click here for update details…</string>
    <string name="update">Update</string>
    <string name="up_to_date">Up To Date</string>
    <string name="install">Install</string>
    <string name="not_installed">Not Installed</string>
    <string name="update_details">Update Details</string>
    <string name="external_storage_title">External Storage</string>
    <string name="external_storage_required">External Storage access is required.</string>
    <string name="external_storage_info">External Storage access is used to store update information. No other information will be accessed.</string>
    <string name="ok">OK</string>
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_info">An internet connection is required to use this application</string>
    <string name="new_version_app_info">A new version of the Updater Application is available. Would you like to update now?</string>
    <string name="please_wait">Installing Updates. Please wait…</string>
    <string name="checking_for_updates">Checking for updates. Please wait…</string>
    <string name="installing_kodi">Installing the Media Center. Please wait…</string>
    <string name="fresh_install">Fresh Install</string>
    <string name="save_user_settings">Save User Settings</string>
    <string name="install_details">Fresh Install – Clicking on Fresh Install WILL completely wipe any personalization you have added to Media Center. This includes Real Debrid accounts, Trakt accounts, favorites within Media Center, favorites within addons, additional addons that you have installed, and background images you have added. ONLY click on Fresh Install if you wish to completely wipe Media Center and end up with a clean installation. All personalization will need to be reinstalled by the end user.\n\nSave User Settings – Clicking on Save User Settings will update everything in Media Center the same way Fresh Install does, but will save most personalization that the end user has installed. Save User Settings will keep Real Debrid accounts, Trakt accounts, favorites within Media Center, favorites within addons, additional addons that you have installed, and background images you have added. This is the best option for users who had added personalization to their Media Center. </string>
    <string name="update_kodi_info">A new version of Media Center is available. Please update to continue</string>
    <string name="update_media_player">Update Media Player</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="try_again_later">A download URL could not be found. Please try again later.</string>
    <string name="please_wait_for_instal">Please wait while Media Center player is installing</string>
    <string name="try_later_install">An error has occurred while attempting to install Media Center. Please try again later</string>
    <string name="mandatory_install_details">The Updater has detected that a fresh install is necessary for your Media Center. A fresh install will ensure that your media center is completely up to date.</string>
    <string name="update_now">Update Now</string>
    <string name="uninstall_text">EZ Stream has released a mandatory update to your Media Center. EZ Stream has released a new Media Center! In order to proceed, you will need to click the REMOVE button below and then the UNINSTALL button. You will then be prompted to install the new Media Center. Once you have installed the new Media Center you will then need to add it as a shortcut on the Home Screen by using the “+” button on the Home Screen and checking the new Media Center.</string>
    <string name="please_wait_install">Please wait Media Center media player is installing</string>
    <string name="must_run_rational">You must run this update before customer service will be able to help you with any issues relating to the media center app.</string>
    <string name="network_error">An error has occurred trying to update Media Player. Please try again later.</string>
    <string name="network_error_2">An error has occurred while checking for application updates. Please try again later.</string>
    <string name="checking_update_text">Checking for Available Updates</string>
    <string name="generic_error">An Error has Occurred</string>
</resources>
