<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_update_type"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.UpdateTypeActivity">

    <TextView
        android:id="@+id/install_details_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:text="@string/install_details"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fresh_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fresh_install"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/user_settings_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_user_settings"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>
