<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.DisclaimerActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="150"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/inner" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/welcome_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/primary_dark_material_dark" />

    <TextView
        android:id="@+id/playerInstallTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#a70505" />


    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_weight="1.3"
        android:enabled="false"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:onClick="onNextButtonClick"
        android:text="@string/next_button" />

</LinearLayout>
